# remote-call

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
remote/: Cargo.toml
remote/src/: main.rs
src/: connector.rs  error.rs  event.rs  lib.rs  list.rs  logger.rs  main.rs  message.rs  objects.rs  server.rs  shared_object.rs  socket.rs  util.rs  wait_for_object.rs
