[package]
name = "remote-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
atticus = "0.2.0"
chrono = "0.4"
derive-deref-rs = "0.1"
fern = "0.6"
json-elem = "0.1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
test-case = "3.3"
