# This crate is a cross-platform inter-process communication system
# that manages messages across processes using TCP stream.
# It uses JSON formatted stream as a protocol when exchanging
# messages across processes.
#
# This is also a library for the client-side processes for Rust.
# The user application can share the object across the TCP stream.
[package]
name = "remote-call"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
license = "MIT"
description = "This crate is a cross-platform inter-process communication system that manages messages across processes using TCP stream."
repository = "https://github.com/LorenzoLeonardo/remote-call"
homepage = "https://github.com/LorenzoLeonardo/remote-call"
readme = "README.md"

[dependencies]
async-trait = "0.1"
atticus = "0.2.0"
chrono = "0.4"
derive-deref-rs = "0.1"
fern = "0.6"
json-elem = "0.1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
ctor = "0.2"
test-case = "3.3"
