[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
remote-call = {git = "https://github.com/LorenzoLeonardo/remote-call.git", branch = "master"}
json-elem = "0.1"
